version/0.19/_sources/api/solver/_autosummary/settings/system.rst.txt
:orphan:

.. _system:

system
======

.. autoclass:: ansys.fluent.core.solver.settings_241.system.system
    :show-inheritance:

.. rubric:: Methods

==========================================================   ===============================

Method                                                                               Summary

==========================================================   ===============================
:ref:`print_process_statistics <print_process_statistics>`       Fluent process information.

:ref:`print_system_statistics <print_system_statistics>`                 System information.

:ref:`print_gpgpu_statistics <print_gpgpu_statistics>`                    GPGPU information.

:ref:`print_time_statistics <print_time_statistics>`                 Time usage information.

==========================================================   ===============================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`report <report_1>`       'report' child.

========================   ===================

