version/0.28/_sources/api/solver/_autosummary/settings/system.rst.txt
:orphan:

.. _system:

system
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.system
    :show-inheritance:

.. rubric:: Methods

==========================================================   ===============================

Method                                                                               Summary

==========================================================   ===============================
:ref:`print_process_statistics <print_process_statistics>`       Fluent process information.

:ref:`print_system_statistics <print_system_statistics>`                 System information.

:ref:`print_gpgpu_statistics <print_gpgpu_statistics>`                    GPGPU information.

:ref:`print_time_statistics <print_time_statistics>`                 Time usage information.

==========================================================   ===============================

.. rubric:: Included in:

==========================   ======================================================================================================================================================================================

Parent                                                                                                                                                                                                      Summary

==========================   ======================================================================================================================================================================================
:ref:`report_2 <report_2>`       Provides access to common settings to set up reports for your CFD simulation. Reports can be compiled for fluxes forces projected areas surface and volume integrals among others.

==========================   ======================================================================================================================================================================================

